derive_tests/tests/compile_fail/unexpected_list_validator.stderr
error: Uncrecognized validate parameter
 --> tests/compile_fail/unexpected_list_validator.rs:5:16
  |
5 |     #[validate(not_a_list(a, b, c))]
  |                ^^^^^^^^^^
